--- a/with_torch.ipynb
+++ b/with_torch.ipynb
@@ -1166,6 +1166,58 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "from torch import optim\n",
+    "from torchsummary import summary\n",
+    "from torch_snippets import *\n",
+    "from torchvision.transforms import transforms\n",
+    "from torchvision import models, datasets\n",
+    "import h5py\n",
+    "from scipy import io\n",
+    "import pretty_json\n",
+    "import json"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "partAtrn = r\"c:\\Users\\Administrator\\Downloads\\CSRNet-pytorch-master\\part_A_train.json\"\n",
+    "partAtst = r'c:\\Users\\Administrator\\Downloads\\CSRNet-pytorch-master\\part_A_test.json'\n",
+    "partAval = r'c:\\Users\\Administrator\\Downloads\\CSRNet-pytorch-master\\part_A_val.json'\n",
+    "\n",
+    "partBtrain = r'c:\\Users\\Administrator\\Downloads\\CSRNet-pytorch-master\\part_B_train.json'\n",
+    "partBtest = r'c:\\Users\\Administrator\\Downloads\\CSRNet-pytorch-master\\part_B_test.json'\n",
+    "partBval = r'c:\\Users\\Administrator\\Downloads\\CSRNet-pytorch-master\\part_B_val.json'\n",
+    "\n",
+    "trnfs = transforms.Compose([\n",
+    "    transforms.ToTensor()\n",
+    "])\n",
+    "\n",
+    "\n",
+    "class Crowds(Dataset):\n",
+    "    def __init__(self, stems):\n",
+    "        self.stems = stems\n",
+    "    \n",
+    "    def __len__(self): return len(self)\n",
+    "\n",
+    "    def __getitem__(self, ix):\n",
+    "        _stem = self.stems[ix]\n",
+    "        image_path = f\"{image_dir}/{_stem}/.jpg\"\n",
+    "\n",
+    "    def checker(self):\n",
+    "        return image_path"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -1174,7 +1226,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "ForAI_Kernel",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1188,7 +1240,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
