--- a/with_torch.ipynb
+++ b/with_torch.ipynb
@@ -1166,9 +1166,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
+      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
+      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
+    }
+   ],
    "source": [
     "import torch\n",
     "import torch.nn as nn\n",
@@ -1177,27 +1189,22 @@
     "from torch_snippets import *\n",
     "from torchvision.transforms import transforms\n",
     "from torchvision import models, datasets\n",
+    "from torch.utils.data import Dataset, DataLoader \n",
+    "from glob import glob\n",
     "import h5py\n",
     "from scipy import io\n",
     "import pretty_json\n",
-    "import json"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "partAtrn = r\"c:\\Users\\Administrator\\Downloads\\CSRNet-pytorch-master\\part_A_train.json\"\n",
-    "partAtst = r'c:\\Users\\Administrator\\Downloads\\CSRNet-pytorch-master\\part_A_test.json'\n",
-    "partAval = r'c:\\Users\\Administrator\\Downloads\\CSRNet-pytorch-master\\part_A_val.json'\n",
+    "import json\n",
+    "from sklearn.model_selection import train_test_split\n",
     "\n",
-    "partBtrain = r'c:\\Users\\Administrator\\Downloads\\CSRNet-pytorch-master\\part_B_train.json'\n",
-    "partBtest = r'c:\\Users\\Administrator\\Downloads\\CSRNet-pytorch-master\\part_B_test.json'\n",
-    "partBval = r'c:\\Users\\Administrator\\Downloads\\CSRNet-pytorch-master\\part_B_val.json'\n",
+    "part_A = glob(r'c:\\Users\\Administrator\\Downloads\\shanghaitech_with_people_density_map\\ShanghaiTech\\part_A\\train_data/')\n",
     "\n",
-    "trnfs = transforms.Compose([\n",
+    "\n",
+    "image_dir = f\"c:\\\\Users\\\\Administrator\\\\Downloads\\\\shanghaitech_with_people_density_map\\\\ShanghaiTech\\\\part_A\\\\train_data\\\\images/\"\n",
+    "heatmap_dir = f'c:\\\\Users\\\\Administrator\\\\Downloads\\\\shanghaitech_with_people_density_map\\\\ShanghaiTech\\\\part_A\\\\train_data\\\\ground-truth-h5/'\n",
+    "gt_dir = f'c:\\\\Users\\\\Administrator\\\\Downloads\\\\shanghaitech_with_people_density_map\\\\ShanghaiTech\\\\part_A\\\\train_data\\\\ground-truth/'\n",
+    "\n",
+    "tfm = transforms.Compose([\n",
     "    transforms.ToTensor()\n",
     "])\n",
     "\n",
@@ -1210,10 +1217,38 @@
     "\n",
     "    def __getitem__(self, ix):\n",
     "        _stem = self.stems[ix]\n",
-    "        image_path = f\"{image_dir}/{_stem}/.jpg\"\n",
-    "\n",
-    "    def checker(self):\n",
-    "        return image_path"
+    "        image_path = f'{image_dir}/{_stem}.jpg'\n",
+    "        heatmap_path = f'{heatmap_dir}/{_stem}.h5'\n",
+    "        gt_path = f'{gt_dir}/GT_{_stem}.mat'\n",
+    "        pts = io.loadmat(gt_path)\n",
+    "        pts = len(pts['image_info'][0,0][0,0][0])\n",
+    "        image = read(image_path, 1)\n",
+    "        with h5py.File(heatmap_path, 'r') as hf:\n",
+    "            gt = hf['density'][:]\n",
+    "        gt = resize(gt, 1/8)*64\n",
+    "        self.image_path = image_path\n",
+    "        return image.copy(), gt.copy(), pts\n",
+    "    def collate_fn(self, batch):\n",
+    "        ims, gts, pts = list(zip(*batch))\n",
+    "        ims = torch.cat([tfm(im)[None] for im in ims])\n",
+    "        gts = torch.cat([tfm(gt)[None] for gt in gts])\n",
+    "        return ims, gts, torch.tensor(pts).to(device)\n",
+    "    def choose(self):\n",
+    "        return self[randint(len(self))]\n",
+    "    \n",
+    "trn_stems, val_stems = train_test_split(stems(glob(f\"{image_dir}/*\")), random_state=10)\n",
+    "trn_ds = Crowds(trn_stems)\n",
+    "val_ds = Crowds(val_stems)\n",
+    "val_ds.choose()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n"
    ]
   },
   {
