--- a/with_torch.ipynb
+++ b/with_torch.ipynb
@@ -1166,7 +1166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1196,6 +1196,7 @@
     "import pretty_json\n",
     "import json\n",
     "from sklearn.model_selection import train_test_split\n",
+    "from utils import save_net,load_net\n",
     "\n",
     "part_A = glob(r'c:\\Users\\Administrator\\Downloads\\shanghaitech_with_people_density_map\\ShanghaiTech\\part_A\\train_data/')\n",
     "\n",
@@ -1235,11 +1236,12 @@
     "        return ims, gts, torch.tensor(pts).to(device)\n",
     "    def choose(self):\n",
     "        return self[randint(len(self))]\n",
-    "    \n",
+    "\n",
     "trn_stems, val_stems = train_test_split(stems(glob(f\"{image_dir}/*\")), random_state=10)\n",
     "trn_ds = Crowds(trn_stems)\n",
     "val_ds = Crowds(val_stems)\n",
-    "val_ds.choose()"
+    "trn_dl = DataLoader(trn_ds, batch_size=1, shuffle=True, collate_fn=trn_ds.collate_fn)\n",
+    "val_dl = DataLoader(val_ds, batch_size=1, shuffle=True, collate_fn=val_ds.collate_fn)"
    ]
   },
   {
@@ -1248,7 +1250,124 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n"
+    "def make_layers(cfg, in_channels = 3, batch_norm=False, dilation = False):\n",
+    "    if dilation:\n",
+    "        d_rate = 2\n",
+    "    else:\n",
+    "        d_rate = 1\n",
+    "    layers = []\n",
+    "    for v in cfg:\n",
+    "        if v == 'M':\n",
+    "            layers += [nn.MaxPool2d(kernel_size=2, stride=2)]\n",
+    "        else:\n",
+    "            conv2d = nn.Conv2d(in_channels,v,kernel_size=3, padding=d_rate, dilation=d_rate)\n",
+    "            if batch_norm:\n",
+    "                layers += [conv2d, nn.BatchNorm2d(v), nn.ReLU(inplace=True)]\n",
+    "            else:\n",
+    "                layers += [conv2d, nn.ReLU(inplace=True)]\n",
+    "            in_channels = v\n",
+    "            \n",
+    "    return nn.Sequential(*layers)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class CSRNet(nn.Module):\n",
+    "    def __init__(self, load_weights=False):\n",
+    "        super(CSRNet, self).__init__()\n",
+    "        self.seen = 0\n",
+    "        self.frontend_feat = [64, 64, 'M', 128, 128, 'M',256, 256, 256, 'M', 512, 512, 512]\n",
+    "        self.backend_feat = [512, 512, 512, 256, 128, 64]\n",
+    "        self.frontend = make_layers(self.frontend_feat)\n",
+    "        self.backend = make_layers(self.backend_feat, in_channels = 512,dilation = True)\n",
+    "        self.output_layer = nn.Conv2d(64, 1, kernel_size=1)\n",
+    "        if not load_weights:\n",
+    "            mod = models.vgg16(pretrained = True)\n",
+    "            self._initialize_weights()\n",
+    "            items = list(self.frontend.state_dict().items())\n",
+    "            _items = list(mod.state_dict().items())\n",
+    "            for i in range(len(self.frontend.state_dict().items())):\n",
+    "                items[i][1].data[:] = _items[i][1].data[:]\n",
+    "\n",
+    "    def forward(self,x):\n",
+    "        x = self.frontend(x)\n",
+    "        x = self.backend(x)\n",
+    "        x = self.output_layer(x)\n",
+    "        return x\n",
+    "    \n",
+    "    def _initialize_weights(self):\n",
+    "        for m in self.modules():\n",
+    "            if isinstance(m, nn.Conv2d):\n",
+    "                nn.init.normal_(m.weight, std=0.01)\n",
+    "                if m.bias is not None:\n",
+    "                    nn.init.constant_(m.bias, 0)\n",
+    "            elif isinstance(m, nn.BatchNorm2d):\n",
+    "                nn.init.constant_(m.weight, 1)\n",
+    "                nn.init.constant_(m.bias, 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def train_batch(model, data, optimizer, criterion):\n",
+    "    model.train()\n",
+    "    optimizer.zero_grad()\n",
+    "    ims, gts, pts = data\n",
+    "    _gts = model(ims)\n",
+    "    loss = criterion(_gts, gts)\n",
+    "    loss.backward()\n",
+    "    optimizer.step()\n",
+    "    pts_loss = nn.L1Loss()(_gts.sum(), gts.sum())\n",
+    "    return loss.item(), pts_loss.item()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "@torch.no_grad()\n",
+    "def validate_batch(model, data, criterion):\n",
+    "    model.eval()\n",
+    "    ims, gts, pts = data\n",
+    "    _gts = model(ims)\n",
+    "    loss = criterion(_gts, gts)\n",
+    "    pts_loss = nn.L1Loss()(_gts.sum(), gts.sum())\n",
+    "    return loss.item(), pts_loss.item()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = CSRNet().to(device)\n",
+    "criterion = nn.MSELoss()\n",
+    "optimizer = optim.Adam(model.parameters(), lr=1e-6)\n",
+    "n_epochs = 20\n",
+    "log = Report(n_epochs)\n",
+    "for ex in range(n_epochs):\n",
+    "    N = len(trn_dl)\n",
+    "    for bx, data in enumerate(trn_dl):\n",
+    "        loss,pts_loss=train_batch(model, data, optimizer, criterion)\n",
+    "        log.record(ex+(bx+1)/N, trn_loss=loss,\n",
+    "                           trn_pts_loss=pts_loss, end='\\r')\n",
+    "    N = len(val_dl)\n",
+    "    for bx, data in enumerate(val_dl):\n",
+    "        loss, pts_loss = validate_batch(model, data, criterion)\n",
+    "        log.record(ex+(bx+1)/N, val_loss=loss,\n",
+    "                    val_pts_loss=pts_loss, end='\\r')\n",
+    "    log.report_avgs(ex+1)\n",
+    "    if ex == 10: optimizer = optim.Adam(model.parameters(), lr=1e-7)"
    ]
   },
   {
