--- a/with_torch.ipynb
+++ b/with_torch.ipynb
@@ -1168,207 +1168,36 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
-      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
-      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
-      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
-     ]
-    }
-   ],
-   "source": [
-    "import torch\n",
-    "import torch.nn as nn\n",
-    "from torch import optim\n",
-    "from torchsummary import summary\n",
-    "from torch_snippets import *\n",
-    "from torchvision.transforms import transforms\n",
-    "from torchvision import models, datasets\n",
-    "from torch.utils.data import Dataset, DataLoader \n",
-    "from glob import glob\n",
-    "import h5py\n",
-    "from scipy import io\n",
-    "import pretty_json\n",
-    "import json\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "from utils import save_net,load_net\n",
-    "\n",
-    "part_A = glob(r'c:\\Users\\Administrator\\Downloads\\shanghaitech_with_people_density_map\\ShanghaiTech\\part_A\\train_data/')\n",
-    "\n",
-    "\n",
-    "image_dir = f\"c:\\\\Users\\\\Administrator\\\\Downloads\\\\shanghaitech_with_people_density_map\\\\ShanghaiTech\\\\part_A\\\\train_data\\\\images/\"\n",
-    "heatmap_dir = f'c:\\\\Users\\\\Administrator\\\\Downloads\\\\shanghaitech_with_people_density_map\\\\ShanghaiTech\\\\part_A\\\\train_data\\\\ground-truth-h5/'\n",
-    "gt_dir = f'c:\\\\Users\\\\Administrator\\\\Downloads\\\\shanghaitech_with_people_density_map\\\\ShanghaiTech\\\\part_A\\\\train_data\\\\ground-truth/'\n",
-    "\n",
-    "tfm = transforms.Compose([\n",
-    "    transforms.ToTensor()\n",
-    "])\n",
-    "\n",
-    "\n",
-    "class Crowds(Dataset):\n",
-    "    def __init__(self, stems):\n",
-    "        self.stems = stems\n",
-    "    \n",
-    "    def __len__(self): return len(self)\n",
-    "\n",
-    "    def __getitem__(self, ix):\n",
-    "        _stem = self.stems[ix]\n",
-    "        image_path = f'{image_dir}/{_stem}.jpg'\n",
-    "        heatmap_path = f'{heatmap_dir}/{_stem}.h5'\n",
-    "        gt_path = f'{gt_dir}/GT_{_stem}.mat'\n",
-    "        pts = io.loadmat(gt_path)\n",
-    "        pts = len(pts['image_info'][0,0][0,0][0])\n",
-    "        image = read(image_path, 1)\n",
-    "        with h5py.File(heatmap_path, 'r') as hf:\n",
-    "            gt = hf['density'][:]\n",
-    "        gt = resize(gt, 1/8)*64\n",
-    "        self.image_path = image_path\n",
-    "        return image.copy(), gt.copy(), pts\n",
-    "    def collate_fn(self, batch):\n",
-    "        ims, gts, pts = list(zip(*batch))\n",
-    "        ims = torch.cat([tfm(im)[None] for im in ims])\n",
-    "        gts = torch.cat([tfm(gt)[None] for gt in gts])\n",
-    "        return ims, gts, torch.tensor(pts).to(device)\n",
-    "    def choose(self):\n",
-    "        return self[randint(len(self))]\n",
-    "\n",
-    "trn_stems, val_stems = train_test_split(stems(glob(f\"{image_dir}/*\")), random_state=10)\n",
-    "trn_ds = Crowds(trn_stems)\n",
-    "val_ds = Crowds(val_stems)\n",
-    "trn_dl = DataLoader(trn_ds, batch_size=1, shuffle=True, collate_fn=trn_ds.collate_fn)\n",
-    "val_dl = DataLoader(val_ds, batch_size=1, shuffle=True, collate_fn=val_ds.collate_fn)"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "def make_layers(cfg, in_channels = 3, batch_norm=False, dilation = False):\n",
-    "    if dilation:\n",
-    "        d_rate = 2\n",
-    "    else:\n",
-    "        d_rate = 1\n",
-    "    layers = []\n",
-    "    for v in cfg:\n",
-    "        if v == 'M':\n",
-    "            layers += [nn.MaxPool2d(kernel_size=2, stride=2)]\n",
-    "        else:\n",
-    "            conv2d = nn.Conv2d(in_channels,v,kernel_size=3, padding=d_rate, dilation=d_rate)\n",
-    "            if batch_norm:\n",
-    "                layers += [conv2d, nn.BatchNorm2d(v), nn.ReLU(inplace=True)]\n",
-    "            else:\n",
-    "                layers += [conv2d, nn.ReLU(inplace=True)]\n",
-    "            in_channels = v\n",
-    "            \n",
-    "    return nn.Sequential(*layers)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "class CSRNet(nn.Module):\n",
-    "    def __init__(self, load_weights=False):\n",
-    "        super(CSRNet, self).__init__()\n",
-    "        self.seen = 0\n",
-    "        self.frontend_feat = [64, 64, 'M', 128, 128, 'M',256, 256, 256, 'M', 512, 512, 512]\n",
-    "        self.backend_feat = [512, 512, 512, 256, 128, 64]\n",
-    "        self.frontend = make_layers(self.frontend_feat)\n",
-    "        self.backend = make_layers(self.backend_feat, in_channels = 512,dilation = True)\n",
-    "        self.output_layer = nn.Conv2d(64, 1, kernel_size=1)\n",
-    "        if not load_weights:\n",
-    "            mod = models.vgg16(pretrained = True)\n",
-    "            self._initialize_weights()\n",
-    "            items = list(self.frontend.state_dict().items())\n",
-    "            _items = list(mod.state_dict().items())\n",
-    "            for i in range(len(self.frontend.state_dict().items())):\n",
-    "                items[i][1].data[:] = _items[i][1].data[:]\n",
-    "\n",
-    "    def forward(self,x):\n",
-    "        x = self.frontend(x)\n",
-    "        x = self.backend(x)\n",
-    "        x = self.output_layer(x)\n",
-    "        return x\n",
-    "    \n",
-    "    def _initialize_weights(self):\n",
-    "        for m in self.modules():\n",
-    "            if isinstance(m, nn.Conv2d):\n",
-    "                nn.init.normal_(m.weight, std=0.01)\n",
-    "                if m.bias is not None:\n",
-    "                    nn.init.constant_(m.bias, 0)\n",
-    "            elif isinstance(m, nn.BatchNorm2d):\n",
-    "                nn.init.constant_(m.weight, 1)\n",
-    "                nn.init.constant_(m.bias, 0)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "def train_batch(model, data, optimizer, criterion):\n",
-    "    model.train()\n",
-    "    optimizer.zero_grad()\n",
-    "    ims, gts, pts = data\n",
-    "    _gts = model(ims)\n",
-    "    loss = criterion(_gts, gts)\n",
-    "    loss.backward()\n",
-    "    optimizer.step()\n",
-    "    pts_loss = nn.L1Loss()(_gts.sum(), gts.sum())\n",
-    "    return loss.item(), pts_loss.item()"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "@torch.no_grad()\n",
-    "def validate_batch(model, data, criterion):\n",
-    "    model.eval()\n",
-    "    ims, gts, pts = data\n",
-    "    _gts = model(ims)\n",
-    "    loss = criterion(_gts, gts)\n",
-    "    pts_loss = nn.L1Loss()(_gts.sum(), gts.sum())\n",
-    "    return loss.item(), pts_loss.item()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model = CSRNet().to(device)\n",
-    "criterion = nn.MSELoss()\n",
-    "optimizer = optim.Adam(model.parameters(), lr=1e-6)\n",
-    "n_epochs = 20\n",
-    "log = Report(n_epochs)\n",
-    "for ex in range(n_epochs):\n",
-    "    N = len(trn_dl)\n",
-    "    for bx, data in enumerate(trn_dl):\n",
-    "        loss,pts_loss=train_batch(model, data, optimizer, criterion)\n",
-    "        log.record(ex+(bx+1)/N, trn_loss=loss,\n",
-    "                           trn_pts_loss=pts_loss, end='\\r')\n",
-    "    N = len(val_dl)\n",
-    "    for bx, data in enumerate(val_dl):\n",
-    "        loss, pts_loss = validate_batch(model, data, criterion)\n",
-    "        log.record(ex+(bx+1)/N, val_loss=loss,\n",
-    "                    val_pts_loss=pts_loss, end='\\r')\n",
-    "    log.report_avgs(ex+1)\n",
-    "    if ex == 10: optimizer = optim.Adam(model.parameters(), lr=1e-7)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -1380,7 +1209,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "ForAI_Kernel",
    "language": "python",
    "name": "python3"
   },
@@ -1394,7 +1223,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.11.6"
   }
  },
  "nbformat": 4,
