--- a/with_torch.ipynb
+++ b/with_torch.ipynb
@@ -1159,10 +1159,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from ultralytics import YOLO\n",
+    "import cv2\n",
+    "from torch_snippets import *\n",
+    "\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "code",
