--- a/with_torch.ipynb
+++ b/with_torch.ipynb
@@ -1158,14 +1158,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Vanilla Encoder"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from ultralytics import YOLO\n",
-    "import cv2\n",
-    "from torch_snippets import *\n",
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "from torch.optim import Adam, lr_scheduler\n",
+    "import torchvision\n",
     "\n",
     "\n"
    ]
