--- a/with_torch.ipynb
+++ b/with_torch.ipynb
@@ -1166,17 +1166,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "import torch\n",
-    "import torch.nn as nn\n",
-    "from torch.optim import Adam, lr_scheduler\n",
-    "import torchvision\n",
-    "\n",
-    "\n"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -1223,7 +1216,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "ForAI_Kernel",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1237,7 +1230,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
