--- a/with_torch.ipynb
+++ b/with_torch.ipynb
@@ -1161,43 +1161,106 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Vanilla Encoder"
+    "# Autoencoders and Image Manipulation"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "from torchvision.datasets import MNIST\n",
+    "from torch_snippets import *\n",
+    "from torch.utils.data import DataLoader\n",
+    "from torchsummary import summary\n",
+    "from torchvision.transforms import transforms as T\n",
+    "import matplotlib.pyplot as plt\n",
+    "from torch.optim import Adam\n",
+    "from PIL import Image\n",
+    "import cv2\n",
+    "\n",
+    "BATCH_SIZE = 32\n",
+    "\n",
+    "trnsfrms = T.Compose([\n",
+    "    T.ToTensor(),\n",
+    "    T.Normalize(mean=[0.5], std=[0.5]),\n",
+    "    T.Lambda(lambda x: x)\n",
+    "])\n",
+    "\n",
+    "dir = r'C:\\Users\\Administrator\\Documents\\Computer-Vision'\n",
+    "\n",
+    "trn_ds = MNIST(dir, download=True, train=True)\n",
+    "val_ds = MNIST(dir, download=True, train=False)\n",
+    "\n",
+    "\n",
+    "trn_dl = DataLoader(trn_ds, batch_size=BATCH_SIZE, shuffle = True)\n",
+    "val_dl = DataLoader(val_ds, batch_size=BATCH_SIZE, shuffle = False)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class AutoEncoder(nn.Module):\n",
+    "    def __init__(self, latent_dim):\n",
+    "        super().__init__()\n",
+    "        self.latent_dim = latent_dim\n",
+    "        self.encoder = nn.Sequential(\n",
+    "            nn.Linear(28 * 28, 128),\n",
+    "            nn.ReLU(True),\n",
+    "            nn.Linear(128, 64),\n",
+    "            nn.ReLU(True),\n",
+    "            nn.Linear(64, latent_dim)\n",
+    "        )\n",
+    "        self.decoder = nn.Sequential(\n",
+    "            nn.Linear(latent_dim, 64),\n",
+    "            nn.Linear(64, 128),\n",
+    "            nn.ReLU(True),\n",
+    "            nn.Linear(128, 28 * 28),\n",
+    "            nn.Tanh()\n",
+    "        )\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        x = x.view(len(x), -1)\n",
+    "        x = self.encoder(x)\n",
+    "        x = self.decoder(x)\n",
+    "        x = x.view(len(x), 1, 28, 28)\n",
+    "\n",
+    "model = AutoEncoder(3)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "from torch.optim import *\n",
+    "def for_training(input, model, criterion, optimizer):\n",
+    "    model.train()\n",
+    "    optimizer.zero_grad()\n",
+    "    output = model(input)\n",
+    "    loss = criterion(output, input)\n",
+    "    optimizer.step()\n",
+    "    return loss.item()\n",
+    "\n",
+    "@torch.no_grad()\n",
+    "def validate_batch(input, model, criterion):\n",
+    "    model.eval()\n",
+    "    output = model(input)\n",
+    "    loss = criterion(output, input)\n",
+    "    return loss\n",
+    "\n",
+    "LR = 1e-3\n",
+    "\n",
+    "loss_fn = nn.MSELoss()\n",
+    "optimizer = torch.optim.AdamW(model.parameters(), lr=0.001, weight_decay=1e-5)\n"
+   ]
   },
   {
    "cell_type": "code",
