--- a/with_torch.ipynb
+++ b/with_torch.ipynb
@@ -1166,7 +1166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1178,6 +1178,7 @@
     "from torchsummary import summary\n",
     "from torchvision.transforms import transforms as T\n",
     "import matplotlib.pyplot as plt\n",
+    "from torch.optim import *\n",
     "from torch.optim import Adam\n",
     "from PIL import Image\n",
     "import cv2\n",
@@ -1192,20 +1193,13 @@
     "\n",
     "dir = r'C:\\Users\\Administrator\\Documents\\Computer-Vision'\n",
     "\n",
-    "trn_ds = MNIST(dir, download=True, train=True)\n",
-    "val_ds = MNIST(dir, download=True, train=False)\n",
+    "trn_ds = MNIST(dir, download=True, train=True, transform=trnsfrms)\n",
+    "val_ds = MNIST(dir, download=True, train=False, transform=trnsfrms)\n",
     "\n",
     "\n",
     "trn_dl = DataLoader(trn_ds, batch_size=BATCH_SIZE, shuffle = True)\n",
-    "val_dl = DataLoader(val_ds, batch_size=BATCH_SIZE, shuffle = False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 82,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "val_dl = DataLoader(val_ds, batch_size=BATCH_SIZE, shuffle = False)\n",
+    "\n",
     "class AutoEncoder(nn.Module):\n",
     "    def __init__(self, latent_dim):\n",
     "        super().__init__()\n",
@@ -1230,22 +1224,16 @@
     "        x = self.encoder(x)\n",
     "        x = self.decoder(x)\n",
     "        x = x.view(len(x), 1, 28, 28)\n",
+    "        return x\n",
     "\n",
-    "model = AutoEncoder(3)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 93,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from torch.optim import *\n",
+    "model = AutoEncoder(3)\n",
+    "\n",
     "def for_training(input, model, criterion, optimizer):\n",
     "    model.train()\n",
     "    optimizer.zero_grad()\n",
     "    output = model(input)\n",
     "    loss = criterion(output, input)\n",
+    "    loss.backward()\n",
     "    optimizer.step()\n",
     "    return loss.item()\n",
     "\n",
@@ -1259,7 +1247,31 @@
     "LR = 1e-3\n",
     "\n",
     "loss_fn = nn.MSELoss()\n",
-    "optimizer = torch.optim.AdamW(model.parameters(), lr=0.001, weight_decay=1e-5)\n"
+    "optimizer = torch.optim.AdamW(model.parameters(), lr=0.001, weight_decay=1e-5)\n",
+    "\n",
+    "num_epochs = 10\n",
+    "for epoch in range(num_epochs):\n",
+    "    N = len(trn_dl)\n",
+    "    for ix, (data, _) in enumerate(trn_dl):\n",
+    "        print(f\"epoch: {epoch}\")\n",
+    "        loss = for_training(data, model, loss_fn, optimizer)\n",
+    "        plt.plot(loss)\n",
+    "        print(f\"{ix}. Training loss: {loss * 100:.2f}%\")\n",
+    "    for ix, (data2, _) in enumerate(val_dl):\n",
+    "        print(f\"epoch: {epoch}\")\n",
+    "        loss2 = validate_batch(data2, model, loss_fn)\n",
+    "        plt.plot(loss2)\n",
+    "        print(f\"{ix}. Val loss: {loss * 100:.2f}%\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Understanding convolutional autoencoders \n",
+    "# PAGE 481"
    ]
   },
   {
