--- a/with_torch.ipynb
+++ b/with_torch.ipynb
@@ -1310,7 +1310,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -6415,7 +6415,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -6491,7 +6491,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -6558,7 +6558,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -6613,7 +6613,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 35,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -6665,22 +6665,159 @@
     {
       "cell_type": "code",
       "source": [
-        "# 491"
+        "import torch, torch.nn as nn, matplotlib.pyplot as plt, torch.nn.functional as F\n",
+        "from torch_snippets import *\n",
+        "from torch import optim\n",
+        "from torch.utils.data import DataLoader, Dataset\n",
+        "from torchvision.datasets import MNIST\n",
+        "from torchvision.transforms import transforms as T\n",
+        "\n",
+        "dir = r'/content/sample_data'\n",
+        "device = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
+        "\n",
+        "trnsfrms = T.Compose([\n",
+        "    T.ToTensor(),\n",
+        "    #T.Normalize(mean = [0.5], std = [0.5]),\n",
+        "])\n",
+        "\n",
+        "trn_ds = MNIST(root = dir, download = True, train = True, transform = trnsfrms)\n",
+        "val_ds = MNIST(root = dir, download = True, train = False, transform = trnsfrms)\n",
+        "\n",
+        "BATCH_SIZE = 32\n",
+        "trn_dl = DataLoader(trn_ds, batch_size=BATCH_SIZE, shuffle = True)\n",
+        "val_dl = DataLoader(val_ds, batch_size=BATCH_SIZE, shuffle = False)"
       ],
       "metadata": {
         "id": "EBrcivMi7bUi"
       },
-      "execution_count": 36,
+      "execution_count": 9,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "class VAE(nn.Module):\n",
+        "  def __init__(self, x_dim, h_dim1, h_dim2, z_dim):\n",
+        "    super(VAE, self).__init__()\n",
+        "    self.d1 = nn.Linear(x_dim, h_dim1)\n",
+        "    self.d2 = nn.Linear(h_dim1, h_dim2)\n",
+        "    self.d31 = nn.Linear(h_dim2, z_dim)\n",
+        "    self.d32 = nn.Linear(h_dim2, z_dim) # epresentation of the log of the variance vectors.\n",
+        "    self.d4 = nn.Linear(z_dim, h_dim2)\n",
+        "    self.d5 = nn.Linear(h_dim2, h_dim1)\n",
+        "    self.d6 = nn.Linear(h_dim1, x_dim)\n",
+        "\n",
+        "  def encoder(self, x):\n",
+        "    h = F.relu(self.d1(x))\n",
+        "    h = F.relu(self.d2(h))\n",
+        "    return self.d31(h), self.d32(h) # mu, log_var.. The encoder returns two vectors: one vector for the mean (self.d31(h)) and the other for the log of variance values (self.d32(h))\n",
+        "\n",
+        "  def sampling(self, mu, log_var):\n",
+        "    std = torch.exp(0.5 * log_var)\n",
+        "    eps = torch.randn_like(std)\n",
+        "    return eps.mul(std).add_(mu)\n",
+        "\n",
+        "  def decoder(self, z):\n",
+        "    h = F.relu(self.d4(z))\n",
+        "    h = F.relu(self.d5(h))\n",
+        "    return F.sigmoid(self.d6(h))\n",
+        "\n",
+        "  def forward(self, x):\n",
+        "    mu, log_var = self.encoder(x.view(-1, 784))\n",
+        "    z = self.sampling(mu, log_var)\n",
+        "    return self.decoder(z), mu, log_var"
+      ],
       "metadata": {
         "id": "1qUkTYp7EOqR"
       },
-      "execution_count": null,
+      "execution_count": 28,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def train_batch(data, model, optimizer, criterion):\n",
+        "  model.train()\n",
+        "  data = data.to(device)\n",
+        "  optimizer.zero_grad()\n",
+        "  recon_batch, mu, log_var = model(data)\n",
+        "  loss, mse, kld = criterion(recon_batch, data, mu, log_var)\n",
+        "  loss.backward()\n",
+        "  optimizer.step()\n",
+        "  return loss, mse, kld, log_var.mean(), mu.mean()\n",
+        "\n",
+        "\n",
+        "@torch.no_grad()\n",
+        "def eval_batch(data, model, criterion):\n",
+        "  model.eval()\n",
+        "  data = data.to(device)\n",
+        "  recon, mu, log_var = model(data)\n",
+        "  loss, mse, kld = criterion(recon, data, mu, log_var)\n",
+        "  return loss, mse, kld, log_var.mean(), mu.mean()"
+      ],
+      "metadata": {
+        "id": "HrzANzvfHfQ8"
+      },
+      "execution_count": 32,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def criterion(recon_x, x, mu, log_var):\n",
+        "  RECON = F.mse_loss(recon_x, x.view(-1, 784), reduction = \"sum\") # MSE loss (RECON); reconstructed image (recon_x)\n",
+        "  KLD = -0.5 * torch.sum(1 + log_var - mu.pow(2) - log_var.exp()) # KL divergence loss\n",
+        "  return RECON + KLD, RECON, KLD"
+      ],
+      "metadata": {
+        "id": "TutxXXCLNjaU"
+      },
+      "execution_count": 37,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from torchsummary import summary\n",
+        "vae = VAE(x_dim = 784, h_dim1 = 512, h_dim2=256, z_dim=50).to(device)\n",
+        "summary(vae, (1, 28, 28))"
+      ],
+      "metadata": {
+        "id": "VGvqFFxEN-kp",
+        "outputId": "1883696d-6e92-4176-c5fa-f52d513b65a1",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 43,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "----------------------------------------------------------------\n",
+            "        Layer (type)               Output Shape         Param #\n",
+            "================================================================\n",
+            "            Linear-1                  [-1, 512]         401,920\n",
+            "            Linear-2                  [-1, 256]         131,328\n",
+            "            Linear-3                   [-1, 50]          12,850\n",
+            "            Linear-4                   [-1, 50]          12,850\n",
+            "            Linear-5                  [-1, 256]          13,056\n",
+            "            Linear-6                  [-1, 512]         131,584\n",
+            "            Linear-7                  [-1, 784]         402,192\n",
+            "================================================================\n",
+            "Total params: 1,105,780\n",
+            "Trainable params: 1,105,780\n",
+            "Non-trainable params: 0\n",
+            "----------------------------------------------------------------\n",
+            "Input size (MB): 0.00\n",
+            "Forward/backward pass size (MB): 0.02\n",
+            "Params size (MB): 4.22\n",
+            "Estimated Total Size (MB): 4.24\n",
+            "----------------------------------------------------------------\n"
+          ]
+        }
+      ]
     }
   ],
   "metadata": {
